--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,7 +56,8 @@
 
         <activity
             android:name="com.anna.sent.soft.womancyc.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
