--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,6 +55,8 @@
                 android:resource="@xml/my_cycle_widget_provider_info_medium" />
         </receiver>
 
+        <service android:name="com.anna.sent.soft.womancyc.widget.UpdateWidgetService" />
+
         <activity
             android:name="com.anna.sent.soft.womancyc.MainActivity"
             android:label="@string/app_name"
