--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,6 +61,11 @@
             android:name="com.anna.sent.soft.womancyc.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
+        </activity>
+        <activity
+            android:name="com.anna.sent.soft.womancyc.PasswordActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
