--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -104,6 +104,13 @@
                 android:value="com.anna.sent.soft.womancyc.MainActivity" />
         </activity>
         <activity
+            android:name="com.anna.sent.soft.womancyc.HelpActivity"
+            android:parentActivityName="com.anna.sent.soft.womancyc.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.anna.sent.soft.womancyc.MainActivity" />
+        </activity>
+        <activity
             android:name="com.google.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
     </application>
