--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/GoogleAdMobAdsSdk-4.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="../numberpicker/NumberPickerLibrary/bin/numberpickerlibrary.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/joda-time-2.2.jar" sourcepath="lib/joda-time-2.2-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:lib/joda-time-2.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
