--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,13 +60,11 @@
 
         <activity
             android:name="com.anna.sent.soft.womancyc.MainActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTop" >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.anna.sent.soft.womancyc.PasswordActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTop" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
