--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,7 +60,8 @@
 
         <activity
             android:name="com.anna.sent.soft.womancyc.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
         </activity>
         <activity
             android:name="com.anna.sent.soft.womancyc.PasswordActivity"
