--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_womancyc"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault.NoActionBar" >
+        android:theme="@android:style/Theme.Black.NoTitleBar" >
         <receiver
             android:name="com.anna.sent.soft.womancyc.widget.MyCycleWidgetSmall"
             android:label="@string/widget_small_name" >
