--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -94,6 +94,34 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.anna.sent.soft.womancyc.MainActivity" />
         </activity>
+        <activity android:name="com.anna.sent.soft.womancyc.actions.MarketChildbirthDateActionActivity" >
+            <intent-filter>
+                <action android:name="com.anna.sent.soft.womancyc.actions.MarketChildbirthDateActionActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.anna.sent.soft.womancyc.actions.EmailSupportActionActivity" >
+            <intent-filter>
+                <action android:name="com.anna.sent.soft.womancyc.actions.EmailSupportActionActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.anna.sent.soft.womancyc.actions.EmailPasswordActionActivity" >
+            <intent-filter>
+                <action android:name="com.anna.sent.soft.womancyc.actions.EmailPasswordActionActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.anna.sent.soft.womancyc.actions.MarketWomanCycActionActivity" >
+            <intent-filter>
+                <action android:name="com.anna.sent.soft.womancyc.actions.MarketWomanCycActionActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="com.google.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
