--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_womancyc"
         android:label="@string/app_name"
+        android:requiredAccountType="com.google"
         android:theme="@android:style/Theme.Black.NoTitleBar" >
         <receiver
             android:name="com.anna.sent.soft.womancyc.widget.MyCycleWidgetSmall"
