--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -67,7 +67,8 @@
         </activity>
         <activity
             android:name="com.anna.sent.soft.womancyc.PasswordActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
