--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.anna.sent.soft.womancyc"
-    android:versionCode="7"
-    android:versionName="1.0.6" >
+    android:versionCode="8"
+    android:versionName="1.0.7" >
 
     <uses-sdk
         android:minSdkVersion="4"
@@ -21,7 +22,8 @@
         android:icon="@drawable/ic_launcher_womancyc"
         android:label="@string/app_name"
         android:requiredAccountType="com.google"
-        android:theme="@android:style/Theme.Black.NoTitleBar" >
+        android:theme="@android:style/Theme.Black.NoTitleBar"
+        tools:ignore="UnusedAttribute" >
         <receiver
             android:name="com.anna.sent.soft.womancyc.widget.MyCycleWidgetSmall"
             android:label="@string/widget_small_name" >
@@ -79,7 +81,8 @@
         <activity
             android:name="com.anna.sent.soft.womancyc.StatisticActivity"
             android:label="@string/statistic"
-            android:parentActivityName="com.anna.sent.soft.womancyc.MainActivity" >
+            android:parentActivityName="com.anna.sent.soft.womancyc.MainActivity"
+            tools:ignore="UnusedAttribute" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.anna.sent.soft.womancyc.MainActivity" />
@@ -87,7 +90,8 @@
         <activity
             android:name="com.anna.sent.soft.womancyc.SettingsActivity"
             android:label="@string/settings"
-            android:parentActivityName="com.anna.sent.soft.womancyc.MainActivity" >
+            android:parentActivityName="com.anna.sent.soft.womancyc.MainActivity"
+            tools:ignore="UnusedAttribute" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.anna.sent.soft.womancyc.MainActivity" />
@@ -95,7 +99,8 @@
         <activity
             android:name="com.anna.sent.soft.womancyc.HelpActivity"
             android:label="@string/help"
-            android:parentActivityName="com.anna.sent.soft.womancyc.MainActivity" >
+            android:parentActivityName="com.anna.sent.soft.womancyc.MainActivity"
+            tools:ignore="UnusedAttribute" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.anna.sent.soft.womancyc.MainActivity" />
@@ -130,7 +135,8 @@
         </activity>
         <activity
             android:name="com.google.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            tools:ignore="MissingRegistered" />
     </application>
 
 </manifest>
