--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -72,7 +72,8 @@
         <activity
             android:name="com.anna.sent.soft.womancyc.PasswordActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="stateAlwaysVisible" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
