--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
+    <permission
+        android:name="com.anna.sent.soft.womancyc.unlocker.Unlocker.permissionToClearPassword"
+        android:label="Permission to clear password in WomanCyc"
+        android:protectionLevel="signature" >
+    </permission>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_womancyc"
@@ -139,6 +145,14 @@
             android:name="com.google.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             tools:ignore="MissingRegistered" />
+
+        <receiver
+            android:name="com.anna.sent.soft.womancyc.unlocker.Unlocker"
+            android:permission="com.anna.sent.soft.womancyc.unlocker.Unlocker.permissionToClearPassword" >
+            <intent-filter>
+                <action android:name="com.anna.sent.soft.womancyc.unlocker.Unlocker.clearPassword" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
