--- a/WomanCyc/project.properties
+++ b/WomanCyc/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../numberpicker/NumberPickerLibrary
-android.library.reference.2=../CommonLibrary
+android.library.reference.1=../../numberpicker/NumberPickerLibrary
+android.library.reference.2=../../CommonLibrary
