--- a/WomanCyc/AndroidManifest.xml
+++ b/WomanCyc/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:icon="@drawable/ic_launcher_womancyc"
         android:label="@string/app_name"
         android:requiredAccountType="com.google"
+        android:supportsRtl="false"
         android:theme="@android:style/Theme.Black.NoTitleBar"
         tools:ignore="UnusedAttribute" >
         <receiver
