--- a/WomanCycUnlocker/AndroidManifest.xml
+++ b/WomanCycUnlocker/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.anna.sent.soft.womancyc.unlocker"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="4"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="21"
+        tools:ignore="OldTargetApi" />
 
     <uses-permission android:name="com.anna.sent.soft.womancyc.unlocker.Unlocker.permissionToClearPassword" />
 
