--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <!--uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /-->
+    <!--uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /-->
+    <!--uses-permission android:name="android.permission.GET_ACCOUNTS" /-->
 
     <permission
         android:name="com.anna.sent.soft.womancyc.unlocker.Unlocker.permissionToClearPassword"
