--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:27.0.2'
-    implementation 'com.google.firebase:firebase-ads:11.8.0'
-    implementation 'com.google.firebase:firebase-crash:11.8.0'
-    implementation 'com.github.Anna-Sentyakova:CommonLibrary:-SNAPSHOT'
+    implementation 'com.github.Anna-Sentyakova:CommonLibrary:1.0.4'
 
     implementation 'joda-time:joda-time:2.9.9'
 }
