--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
@@ -13,15 +14,25 @@ android {
     }
 
     buildTypes {
-        release {
+        debug {
+            debuggable true
             minifyEnabled false
+            ext.enableCrashlytics = false
+            buildConfigField "boolean", "ENABLE_CRASHLYTICS", "false"
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
+        release {
+            debuggable false
+            minifyEnabled false
+            ext.enableCrashlytics = true
+            buildConfigField "boolean", "ENABLE_CRASHLYTICS", "true"
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
 }
 
 dependencies {
-    implementation 'com.github.Anna-Sentyakova:CommonLibrary:1.0.11'
+    implementation 'com.github.Anna-Sentyakova:CommonLibrary:1.0.21'
 
     implementation 'joda-time:joda-time:2.9.9'
 }
