--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -134,5 +134,9 @@
                 <action android:name="com.anna.sent.soft.womancyc.unlocker.Unlocker.clearPassword" />
             </intent-filter>
         </receiver>
+
+        <meta-data
+            android:name="test_device_ids"
+            android:value="2600D922057328C48F2E6DBAB33639C1,9181DC11966389868E60DE66CAC818A3,0A2245B8887D4B05DF59EB37AD741C46,47D9C39F51DAC2173986C7832B6CAB57,2F2B82AD62F209D48AFC29A0C88065FA" />
     </application>
 </manifest>
